--- a/project_1/dense_network.ipynb
+++ b/project_1/dense_network.ipynb
@@ -114,49 +114,67 @@
     "input_dim = 2*14*14\n",
     "output_dim = 2\n",
     "\n",
+    "#Number of parameters : (dim_input*hidden_dim1 + hidden_dim1*hidden_dim2 + hidden_dim2*hidden_dim3 + \n",
+    "# hidden_dim3*dim_output + hidden_dim1 + hidden_dim2 + hidden_dim3 + dim_output)\n",
+    "\n",
     "model1 = nn.Sequential(nn.Linear(input_dim, 128), nn.ReLU(), nn.Linear(128, output_dim))\n",
+    "#50562 parameters\n",
     "\n",
     "model2 = nn.Sequential(nn.Linear(input_dim, 256), nn.ReLU(), nn.Linear(256, output_dim))\n",
+    "#101112 parameters\n",
     "\n",
     "model3 = nn.Sequential(nn.Linear(input_dim, 512), nn.ReLU(), nn.Linear(512, output_dim))\n",
+    "#202242 parameters\n",
     "\n",
     "model4 = nn.Sequential(nn.Linear(input_dim, 1024), nn.ReLU(), nn.Linear(1024, output_dim))\n",
+    "#404482 parameters\n",
     "\n",
     "model5 = nn.Sequential(nn.Linear(input_dim, 128), nn.ReLU(), nn.Linear(128, 256), nn.ReLU(), \\\n",
     "                       nn.Linear(256, output_dim))\n",
+    "#83842 parameters\n",
     "\n",
     "model6 = nn.Sequential(nn.Linear(input_dim, 256), nn.ReLU(), nn.Linear(256, 512), nn.ReLU(), \\\n",
     "                       nn.Linear(512, output_dim))\n",
+    "#233218 parameters\n",
     "\n",
     "model7 = nn.Sequential(nn.Linear(input_dim, 512), nn.ReLU(), nn.Linear(512, 1024), nn.ReLU(), \\\n",
     "                       nn.Linear(1024, output_dim))\n",
+    "#728578 parameters\n",
     "\n",
     "model8 = nn.Sequential(nn.Linear(input_dim, 128), nn.ReLU(), nn.Linear(128, 256), nn.ReLU(), nn.Linear(256, 512),\\\n",
     "                       nn.ReLU(), nn.Linear(512, output_dim))\n",
+    "#215938 parameters\n",
     "\n",
     "model9 = nn.Sequential(nn.Linear(input_dim, 256), nn.ReLU(), nn.Linear(256, 512), nn.ReLU(), nn.Linear(512, 1024),\\\n",
     "                       nn.ReLU(), nn.Linear(1024, output_dim))\n",
+    "#759554 parameters\n",
     "\n",
     "model10 = nn.Sequential(nn.Linear(input_dim, 128), nn.ReLU(), nn.Linear(128, 256), nn.ReLU(), nn.Linear(256, 512),\\\n",
     "                       nn.ReLU(), nn.Linear(512, 1024), nn.ReLU(), nn.Linear(1024, output_dim))\n",
+    "#742274 parameters\n",
     "\n",
     "model11 = nn.Sequential(nn.Linear(input_dim, 64), nn.ReLU(), nn.Linear(64, 128), nn.ReLU(), nn.Linear(128, 256),\\\n",
     "                       nn.ReLU(), nn.Linear(256, 512), nn.ReLU(), nn.Linear(512, output_dim))\n",
+    "#200066 parameters\n",
     "\n",
     "model12 = nn.Sequential(nn.Linear(input_dim, 256), nn.ReLU(), nn.Linear(256, 512), nn.ReLU(), nn.Linear(512, 1024),\\\n",
     "                       nn.ReLU(), nn.Linear(1024, 2048), nn.ReLU(), nn.Linear(2048, output_dim))\n",
+    "#2'860'802 parameters\n",
     "\n",
     "model13 = nn.Sequential(nn.Linear(input_dim, 64), nn.ReLU(), nn.Linear(64, 128), nn.ReLU(), nn.Linear(128, 256),\\\n",
     "                       nn.ReLU(), nn.Linear(256, 512), nn.ReLU(), nn.Linear(512, 1024), nn.ReLU(), \\\n",
     "                        nn.Linear(1024, output_dim))\n",
+    "#725442 parameters\n",
     "\n",
     "model14 = nn.Sequential(nn.Linear(input_dim, 128), nn.ReLU(), nn.Linear(128, 256), nn.ReLU(), nn.Linear(256, 512),\\\n",
     "                       nn.ReLU(), nn.Linear(512, 1024), nn.ReLU(), nn.Linear(1024, 2048), nn.ReLU(), \\\n",
     "                        nn.Linear(2048, output_dim))\n",
+    "#2'841'538 parameters\n",
     "\n",
     "model15 = nn.Sequential(nn.Linear(input_dim, 256), nn.ReLU(), nn.Linear(256, 512), nn.ReLU(), nn.Linear(512, 1024),\\\n",
     "                       nn.ReLU(), nn.Linear(1024, 2048), nn.ReLU(), nn.Linear(2048, 4096), nn.ReLU(), \\\n",
     "                        nn.Linear(4096, output_dim))\n",
+    "#11'251'650 parameters\n",
     "\n",
     "models = [model1, model2, model3, model4, model5, model6, model7, model8, model9, model10, model11, model12,\\\n",
     "          model13, model14, model15]"
@@ -197,49 +215,67 @@
     "input_dim = 14*14\n",
     "output_dim = 10\n",
     "\n",
+    "#Number of parameters : (dim_input*hidden_dim1 + hidden_dim1*hidden_dim2 + hidden_dim2*hidden_dim3 + \n",
+    "# hidden_dim3*dim_output + hidden_dim1 + hidden_dim2 + hidden_dim3 + dim_output)\n",
+    "\n",
     "model1 = nn.Sequential(nn.Linear(input_dim, 128), nn.ReLU(), nn.Linear(128, output_dim))\n",
+    "#26'506 parameters\n",
     "\n",
     "model2 = nn.Sequential(nn.Linear(input_dim, 256), nn.ReLU(), nn.Linear(256, output_dim))\n",
+    "#53'002 parameters\n",
     "\n",
     "model3 = nn.Sequential(nn.Linear(input_dim, 512), nn.ReLU(), nn.Linear(512, output_dim))\n",
+    "#105'994 parameters\n",
     "\n",
     "model4 = nn.Sequential(nn.Linear(input_dim, 1024), nn.ReLU(), nn.Linear(1024, output_dim))\n",
+    "#211'978 parameters\n",
     "\n",
     "model5 = nn.Sequential(nn.Linear(input_dim, 128), nn.ReLU(), nn.Linear(128, 256), nn.ReLU(), \\\n",
     "                       nn.Linear(256, output_dim))\n",
+    "#60'810 parameters\n",
     "\n",
     "model6 = nn.Sequential(nn.Linear(input_dim, 256), nn.ReLU(), nn.Linear(256, 512), nn.ReLU(), \\\n",
     "                       nn.Linear(512, output_dim))\n",
+    "#187'146 parameters\n",
     "\n",
     "model7 = nn.Sequential(nn.Linear(input_dim, 512), nn.ReLU(), nn.Linear(512, 1024), nn.ReLU(), \\\n",
     "                       nn.Linear(1024, output_dim))\n",
+    "#636'426 parameters\n",
     "\n",
     "model8 = nn.Sequential(nn.Linear(input_dim, 128), nn.ReLU(), nn.Linear(128, 256), nn.ReLU(), nn.Linear(256, 512),\\\n",
     "                       nn.ReLU(), nn.Linear(512, output_dim))\n",
+    "#194'954 parameters\n",
     "\n",
     "model9 = nn.Sequential(nn.Linear(input_dim, 256), nn.ReLU(), nn.Linear(256, 512), nn.ReLU(), nn.Linear(512, 1024),\\\n",
     "                       nn.ReLU(), nn.Linear(1024, output_dim))\n",
+    "#717'578 parameters\n",
     "\n",
     "model10 = nn.Sequential(nn.Linear(input_dim, 128), nn.ReLU(), nn.Linear(128, 256), nn.ReLU(), nn.Linear(256, 512),\\\n",
     "                       nn.ReLU(), nn.Linear(512, 1024), nn.ReLU(), nn.Linear(1024, output_dim))\n",
+    "#724'362 parameters\n",
     "\n",
     "model11 = nn.Sequential(nn.Linear(input_dim, 64), nn.ReLU(), nn.Linear(64, 128), nn.ReLU(), nn.Linear(128, 256),\\\n",
     "                       nn.ReLU(), nn.Linear(256, 512), nn.ReLU(), nn.Linear(512, output_dim))\n",
+    "#190'666 parameters\n",
     "\n",
     "model12 = nn.Sequential(nn.Linear(input_dim, 256), nn.ReLU(), nn.Linear(256, 512), nn.ReLU(), nn.Linear(512, 1024),\\\n",
     "                       nn.ReLU(), nn.Linear(1024, 2048), nn.ReLU(), nn.Linear(2048, output_dim))\n",
+    "#2'827'018 parameters\n",
     "\n",
     "model13 = nn.Sequential(nn.Linear(input_dim, 64), nn.ReLU(), nn.Linear(64, 128), nn.ReLU(), nn.Linear(128, 256),\\\n",
     "                       nn.ReLU(), nn.Linear(256, 512), nn.ReLU(), nn.Linear(512, 1024), nn.ReLU(), \\\n",
     "                        nn.Linear(1024, output_dim))\n",
+    "#721'098 parameters\n",
     "\n",
     "model14 = nn.Sequential(nn.Linear(input_dim, 128), nn.ReLU(), nn.Linear(128, 256), nn.ReLU(), nn.Linear(256, 512),\\\n",
     "                       nn.ReLU(), nn.Linear(512, 1024), nn.ReLU(), nn.Linear(1024, 2048), nn.ReLU(), \\\n",
     "                        nn.Linear(2048, output_dim))\n",
+    "#2'834'826 parameters\n",
     "\n",
     "model15 = nn.Sequential(nn.Linear(input_dim, 256), nn.ReLU(), nn.Linear(256, 512), nn.ReLU(), nn.Linear(512, 1024),\\\n",
     "                       nn.ReLU(), nn.Linear(1024, 2048), nn.ReLU(), nn.Linear(2048, 4096), nn.ReLU(), \\\n",
     "                        nn.Linear(4096, output_dim))\n",
+    "#11'240'202 parameters\n",
     "\n",
     "models = [model1, model2, model3, model4, model5, model6, model7, model8, model9, model10, model11, model12,\\\n",
     "          model13, model14, model15]"
@@ -502,6 +538,358 @@
    "source": [
     "Model 4 seems to be the best"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The best models have 200'000-400'000 parameters, we try to create other models with this number of parameters but different architectures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Direct Approach Again"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_dim = 2*14*14\n",
+    "output_dim = 2\n",
+    "\n",
+    "model16 = nn.Sequential(nn.Linear(input_dim, 200), nn.ReLU(), nn.Linear(200, 200), nn.ReLU(), nn.Linear(200, 200),\\\n",
+    "                       nn.ReLU(), nn.Linear(200, 200), nn.ReLU(), nn.Linear(200, 200), nn.ReLU(), \\\n",
+    "                        nn.Linear(200, output_dim))\n",
+    "#239'802 parameters\n",
+    "\n",
+    "model17 = nn.Sequential(nn.Linear(input_dim, 200), nn.ReLU(), nn.Linear(200, 200), nn.ReLU(), nn.Linear(200, 200),\\\n",
+    "                       nn.ReLU(), nn.Linear(200, 200), nn.ReLU(), nn.Linear(200, output_dim))\n",
+    "#199'602 parameters\n",
+    "\n",
+    "model18 = nn.Sequential(nn.Linear(input_dim, 300), nn.ReLU(), nn.Linear(300, 300), nn.ReLU(), nn.Linear(300, 300),\\\n",
+    "                       nn.ReLU(), nn.Linear(300, 300), nn.ReLU(), nn.Linear(300, output_dim))\n",
+    "#389'402 parameters\n",
+    "\n",
+    "model19 = nn.Sequential(nn.Linear(input_dim, 512), nn.ReLU(), nn.Linear(512, 256), nn.ReLU(), nn.Linear(256, 128),\\\n",
+    "                       nn.ReLU(), nn.Linear(128, output_dim))\n",
+    "#266'378 parameters\n",
+    "\n",
+    "model20 = nn.Sequential(nn.Linear(input_dim, 100), nn.ReLU(), nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100),\\\n",
+    "                       nn.ReLU(), nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100), nn.ReLU(),\\\n",
+    "                        nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100),\\\n",
+    "                        nn.ReLU(), nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100), nn.ReLU(),\\\n",
+    "                        nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100),\\\n",
+    "                        nn.ReLU(), nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100), nn.ReLU(),\\\n",
+    "                        nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100), nn.ReLU(),\\\n",
+    "                        nn.Linear(100, output_dim))\n",
+    "#201'102 parameters\n",
+    "\n",
+    "models = [model16, model17, model18, model19, model20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 50\n",
+    "accuracies = torch.empty(5, 10, dtype=torch.float)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    train_input, train_target, train_classes, test_input, test_target, test_classes = prolog.generate_pair_sets(1000)\n",
+    "    train_input_direct = train_input.view(-1, input_dim)\n",
+    "    test_input_direct = test_input.view(-1, input_dim)\n",
+    "    for j in range(5):\n",
+    "        _, _, _, best_accuracy = train_model(models[j], train_input_direct, train_target, test_input_direct,\\\n",
+    "                                             test_target, epochs=epochs)\n",
+    "        accuracies[j][i] = best_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.7582, 0.7434, 0.7684, 0.7816, 0.7928])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies.mean(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0129, 0.0172, 0.0160, 0.0139, 0.0154])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies.std(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.return_types.median(\n",
+       "values=tensor([0.7580, 0.7410, 0.7660, 0.7750, 0.7900]),\n",
+       "indices=tensor([9, 3, 8, 2, 0]))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies.median(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.return_types.max(\n",
+       "values=tensor([0.7830, 0.7680, 0.7940, 0.8040, 0.8280]),\n",
+       "indices=tensor([3, 5, 5, 5, 5]))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies.max(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.return_types.min(\n",
+       "values=tensor([0.7390, 0.7210, 0.7410, 0.7600, 0.7680]),\n",
+       "indices=tensor([8, 8, 1, 3, 8]))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies.min(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Auxiliary Approach Again"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_dim = 14*14\n",
+    "output_dim = 10\n",
+    "\n",
+    "model16 = nn.Sequential(nn.Linear(input_dim, 200), nn.ReLU(), nn.Linear(200, 200), nn.ReLU(), nn.Linear(200, 200),\\\n",
+    "                       nn.ReLU(), nn.Linear(200, 200), nn.ReLU(), nn.Linear(200, 200), nn.ReLU(), \\\n",
+    "                        nn.Linear(200, output_dim))\n",
+    "#202'210 parameters\n",
+    "\n",
+    "model17 = nn.Sequential(nn.Linear(input_dim, 200), nn.ReLU(), nn.Linear(200, 200), nn.ReLU(), nn.Linear(200, 200),\\\n",
+    "                       nn.ReLU(), nn.Linear(200, 200), nn.ReLU(), nn.Linear(200, output_dim))\n",
+    "#162'010 parameters\n",
+    "\n",
+    "model18 = nn.Sequential(nn.Linear(input_dim, 300), nn.ReLU(), nn.Linear(300, 300), nn.ReLU(), nn.Linear(300, 300),\\\n",
+    "                       nn.ReLU(), nn.Linear(300, 300), nn.ReLU(), nn.Linear(300, output_dim))\n",
+    "#333'010 parameters\n",
+    "\n",
+    "model19 = nn.Sequential(nn.Linear(input_dim, 512), nn.ReLU(), nn.Linear(512, 256), nn.ReLU(), nn.Linear(256, 128),\\\n",
+    "                        nn.ReLU(), nn.Linear(128, output_dim))\n",
+    "#365'698 parameters\n",
+    "\n",
+    "model20 = nn.Sequential(nn.Linear(input_dim, 100), nn.ReLU(), nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100),\\\n",
+    "                       nn.ReLU(), nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100), nn.ReLU(),\\\n",
+    "                        nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100),\\\n",
+    "                        nn.ReLU(), nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100), nn.ReLU(),\\\n",
+    "                        nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100),\\\n",
+    "                        nn.ReLU(), nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100), nn.ReLU(),\\\n",
+    "                        nn.Linear(100, 100), nn.ReLU(), nn.Linear(100, 100), nn.ReLU(),\\\n",
+    "                        nn.Linear(100, output_dim))\n",
+    "#231'610 parameters\n",
+    "\n",
+    "models = [model16, model17, model18, model19, model20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = 100\n",
+    "accuracies_aux = torch.empty(5, 10, dtype=torch.float)\n",
+    "\n",
+    "for i in range(10):\n",
+    "    train_input, train_target, train_classes, test_input, test_target, test_classes = prolog.generate_pair_sets(1000)\n",
+    "    train_input_aux = train_input.view(-1, input_dim)\n",
+    "    test_input_aux = test_input.view(-1, input_dim)\n",
+    "    train_classes_aux = train_classes.view(2000)\n",
+    "    test_classes_aux = test_classes.view(2000)\n",
+    "    for j in range(5):\n",
+    "        _, _, _, best_accuracy = train_model_aux(models[j], train_input_aux, train_classes_aux, \\\n",
+    "                                                       test_input_aux, test_target, test_classes_aux, \\\n",
+    "                                                       epochs=epochs)\n",
+    "        accuracies_aux[j][i] = best_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.9340, 0.9228, 0.9415, 0.9430, 0.9499])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies_aux.mean(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0091, 0.0080, 0.0062, 0.0080, 0.0073])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies_aux.std(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.return_types.median(\n",
+       "values=tensor([0.9360, 0.9220, 0.9400, 0.9420, 0.9490]),\n",
+       "indices=tensor([2, 0, 9, 8, 6]))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies_aux.median(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.return_types.max(\n",
+       "values=tensor([0.9510, 0.9320, 0.9540, 0.9530, 0.9600]),\n",
+       "indices=tensor([7, 7, 7, 6, 7]))"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies_aux.max(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.return_types.min(\n",
+       "values=tensor([0.9210, 0.9060, 0.9300, 0.9290, 0.9350]),\n",
+       "indices=tensor([4, 4, 4, 4, 0]))"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies_aux.min(1)"
+   ]
   }
  ],
  "metadata": {
@@ -520,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
