--- a/project2/test.ipynb
+++ b/project2/test.ipynb
@@ -14,7 +14,7 @@
     "    def __init__(self, dim_in, dim_out):\n",
     "\n",
     "        # constant used for initializing weights\n",
-    "        eps = 1e-6\n",
+    "        eps = 1e-2\n",
     "\n",
     "        # weights for the layer\n",
     "        self.w = torch.empty(dim_out, dim_in).normal_(0, eps)\n",
@@ -33,8 +33,8 @@
     "\n",
     "    def forward(self, x_in):\n",
     "\n",
-    "        if x_in.dim() >1:\n",
-    "            x_out =  torch.mm(self.w,x_in) + self.b         # To handle input of vector form\n",
+    "        if x_in.dim() > 1:\n",
+    "            x_out =  torch.mm(self.w, x_in) + self.b         # To handle input of vector form\n",
     "        else:\n",
     "            x_out =  torch.mv(self.w,x_in) + self.b         # To handle input of tensor form\n",
     "        self.temp = x_in\n",
@@ -86,6 +86,44 @@
     "    def gradient(self, x_in):\n",
     "\n",
     "        return torch.where(x_in> 0, torch.ones_like(x_in), torch.zeros_like(x_in))\n",
+    "\n",
+    "    def backward(self, gradwrtoutput, x_in = None):\n",
+    "        \"\"\"\n",
+    "        :param gradwrtoutput: Gradient of loss wrt module's output\n",
+    "        :param x_in: Module's input\n",
+    "        :return: Gradient of loss wrt module's input\n",
+    "        \"\"\"\n",
+    "\n",
+    "        if x_in == None:            # If x_in is not provided, it's taken from the forward pass\n",
+    "            x_in = self.temp\n",
+    "\n",
+    "        dldx_in = torch.mul(gradwrtoutput, self.gradient(x_in))     #Compute gradient wrt input of module\n",
+    "        return dldx_in\n",
+    "\n",
+    "    def param(self):\n",
+    "\n",
+    "        return []\n",
+    "\n",
+    "    def grad_zero(self):\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "    __call__ = forward\n",
+    "    \n",
+    "class Tanh():\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.temp = []        # Temporary variable to store module's previous input for use in backward pass\n",
+    "\n",
+    "\n",
+    "    def forward(self, x_in):\n",
+    "\n",
+    "        self.temp = x_in\n",
+    "        return (torch.exp(x_in) - torch.exp(-x_in)) / (torch.exp(x_in) + torch.exp(-x_in))\n",
+    "\n",
+    "    def gradient(self, x_in):\n",
+    "\n",
+    "        return 1 - torch.pow(self.forward(x_in), 2)\n",
     "\n",
     "    def backward(self, gradwrtoutput, x_in = None):\n",
     "        \"\"\"\n",
@@ -246,6 +284,7 @@
     "    test_target = test_target * zeta\n",
     "\n",
     "    lr = 0.01/nb_train_samples\n",
+    "    loss_criterion = loss_MSE()\n",
     "\n",
     "    for e in range(n_epoch):\n",
     "        model.grad_zero()\n",
@@ -262,10 +301,10 @@
     "            model.backward(loss_grad)                         # Backward step\n",
     "\n",
     "            sum_loss = sum_loss + loss\n",
-    "        # Gradient Step\n",
+    "        #Gradient Step\n",
     "        paramlist, gradlist = model.param()\n",
     "        for i, (param, param_grad) in enumerate(zip(paramlist, gradlist)):\n",
-    "            # print(param.max()/param_grad.max())\n",
+    "            #print(param.max()/param_grad.max())\n",
     "            param -= lr*param_grad\n",
     "\n",
     "        for idx in range(nb_test_samples):\n",
@@ -277,7 +316,7 @@
     "        test_error = nb_test_errors/nb_test_samples * 100\n",
     "\n",
     "        print(\"{:d} Loss= {:.02f}  Train error = {:.02f}%, Test error = {:.02f}%\" \\\n",
-    "              .format(e+1, sum_loss,train_error, test_error))"
+    "              .format(e+1, sum_loss, train_error, test_error))"
    ]
   },
   {
@@ -299,7 +338,6 @@
     "R1 = relu()\n",
     "L2 = Linear(25, 2)\n",
     "R2 = relu()\n",
-    "loss_criterion = loss_MSE()\n",
     "\n",
     "model = Sequential(L1, R1, L2, R2)"
    ]
@@ -313,106 +351,106 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 Loss= 81.00  Train error = 57.00%, Test error = 56.00%\n",
-      "2 Loss= 80.41  Train error = 57.00%, Test error = 56.00%\n",
-      "3 Loss= 79.84  Train error = 57.00%, Test error = 56.00%\n",
-      "4 Loss= 79.29  Train error = 57.00%, Test error = 56.00%\n",
-      "5 Loss= 78.76  Train error = 57.00%, Test error = 56.00%\n",
-      "6 Loss= 78.26  Train error = 57.00%, Test error = 56.00%\n",
-      "7 Loss= 77.78  Train error = 57.00%, Test error = 56.00%\n",
-      "8 Loss= 77.31  Train error = 57.00%, Test error = 56.00%\n",
-      "9 Loss= 76.86  Train error = 57.00%, Test error = 56.00%\n",
-      "10 Loss= 76.43  Train error = 57.00%, Test error = 56.00%\n",
-      "11 Loss= 76.02  Train error = 57.00%, Test error = 56.00%\n",
-      "12 Loss= 75.63  Train error = 57.00%, Test error = 56.00%\n",
-      "13 Loss= 75.25  Train error = 57.00%, Test error = 56.00%\n",
-      "14 Loss= 74.88  Train error = 57.00%, Test error = 56.00%\n",
-      "15 Loss= 74.53  Train error = 57.00%, Test error = 56.00%\n",
-      "16 Loss= 74.19  Train error = 57.00%, Test error = 56.00%\n",
-      "17 Loss= 73.87  Train error = 57.00%, Test error = 56.00%\n",
-      "18 Loss= 73.56  Train error = 57.00%, Test error = 56.00%\n",
-      "19 Loss= 73.26  Train error = 57.00%, Test error = 56.00%\n",
-      "20 Loss= 72.97  Train error = 57.00%, Test error = 56.00%\n",
-      "21 Loss= 72.70  Train error = 57.00%, Test error = 56.00%\n",
-      "22 Loss= 72.43  Train error = 57.00%, Test error = 56.00%\n",
-      "23 Loss= 72.18  Train error = 57.00%, Test error = 56.00%\n",
-      "24 Loss= 71.94  Train error = 57.00%, Test error = 56.00%\n",
-      "25 Loss= 71.70  Train error = 57.00%, Test error = 56.00%\n",
-      "26 Loss= 71.48  Train error = 57.00%, Test error = 56.00%\n",
-      "27 Loss= 71.26  Train error = 57.00%, Test error = 56.00%\n",
-      "28 Loss= 71.05  Train error = 57.00%, Test error = 56.00%\n",
-      "29 Loss= 70.85  Train error = 57.00%, Test error = 56.00%\n",
-      "30 Loss= 70.66  Train error = 57.00%, Test error = 56.00%\n",
-      "31 Loss= 70.48  Train error = 57.00%, Test error = 56.00%\n",
-      "32 Loss= 70.30  Train error = 57.00%, Test error = 56.00%\n",
-      "33 Loss= 70.13  Train error = 57.00%, Test error = 56.00%\n",
-      "34 Loss= 69.97  Train error = 57.00%, Test error = 56.00%\n",
-      "35 Loss= 69.81  Train error = 57.00%, Test error = 56.00%\n",
-      "36 Loss= 69.66  Train error = 57.00%, Test error = 56.00%\n",
-      "37 Loss= 69.52  Train error = 57.00%, Test error = 56.00%\n",
-      "38 Loss= 69.38  Train error = 57.00%, Test error = 56.00%\n",
-      "39 Loss= 69.25  Train error = 57.00%, Test error = 56.00%\n",
-      "40 Loss= 69.12  Train error = 57.00%, Test error = 56.00%\n",
-      "41 Loss= 69.00  Train error = 57.00%, Test error = 56.00%\n",
-      "42 Loss= 68.88  Train error = 57.00%, Test error = 56.00%\n",
-      "43 Loss= 68.77  Train error = 57.00%, Test error = 56.00%\n",
-      "44 Loss= 68.66  Train error = 57.00%, Test error = 56.00%\n",
-      "45 Loss= 68.55  Train error = 57.00%, Test error = 56.00%\n",
-      "46 Loss= 68.45  Train error = 57.00%, Test error = 56.00%\n",
-      "47 Loss= 68.36  Train error = 57.00%, Test error = 56.00%\n",
-      "48 Loss= 68.27  Train error = 57.00%, Test error = 56.00%\n",
-      "49 Loss= 68.18  Train error = 57.00%, Test error = 56.00%\n",
-      "50 Loss= 68.09  Train error = 57.00%, Test error = 56.00%\n",
-      "51 Loss= 68.01  Train error = 57.00%, Test error = 56.00%\n",
-      "52 Loss= 67.93  Train error = 57.00%, Test error = 56.00%\n",
-      "53 Loss= 67.86  Train error = 57.00%, Test error = 56.00%\n",
-      "54 Loss= 67.78  Train error = 57.00%, Test error = 56.00%\n",
-      "55 Loss= 67.71  Train error = 57.00%, Test error = 56.00%\n",
-      "56 Loss= 67.65  Train error = 57.00%, Test error = 56.00%\n",
-      "57 Loss= 67.58  Train error = 57.00%, Test error = 56.00%\n",
-      "58 Loss= 67.52  Train error = 57.00%, Test error = 56.00%\n",
-      "59 Loss= 67.46  Train error = 57.00%, Test error = 56.00%\n",
-      "60 Loss= 67.40  Train error = 57.00%, Test error = 56.00%\n",
-      "61 Loss= 67.35  Train error = 57.00%, Test error = 56.00%\n",
-      "62 Loss= 67.30  Train error = 57.00%, Test error = 56.00%\n",
-      "63 Loss= 67.25  Train error = 57.00%, Test error = 56.00%\n",
-      "64 Loss= 67.20  Train error = 57.00%, Test error = 56.00%\n",
-      "65 Loss= 67.15  Train error = 57.00%, Test error = 56.00%\n",
-      "66 Loss= 67.11  Train error = 57.00%, Test error = 56.00%\n",
-      "67 Loss= 67.06  Train error = 57.00%, Test error = 56.00%\n",
-      "68 Loss= 67.02  Train error = 57.00%, Test error = 56.00%\n",
-      "69 Loss= 66.98  Train error = 57.00%, Test error = 56.00%\n",
-      "70 Loss= 66.94  Train error = 57.00%, Test error = 56.00%\n",
-      "71 Loss= 66.91  Train error = 57.00%, Test error = 56.00%\n",
-      "72 Loss= 66.87  Train error = 57.00%, Test error = 56.00%\n",
-      "73 Loss= 66.84  Train error = 57.00%, Test error = 56.00%\n",
-      "74 Loss= 66.81  Train error = 57.00%, Test error = 56.00%\n",
-      "75 Loss= 66.78  Train error = 57.00%, Test error = 56.00%\n",
-      "76 Loss= 66.75  Train error = 57.00%, Test error = 56.00%\n",
-      "77 Loss= 66.72  Train error = 57.00%, Test error = 56.00%\n",
-      "78 Loss= 66.69  Train error = 57.00%, Test error = 56.00%\n",
-      "79 Loss= 66.66  Train error = 57.00%, Test error = 56.00%\n",
-      "80 Loss= 66.64  Train error = 57.00%, Test error = 56.00%\n",
-      "81 Loss= 66.61  Train error = 57.00%, Test error = 56.00%\n",
-      "82 Loss= 66.59  Train error = 57.00%, Test error = 56.00%\n",
-      "83 Loss= 66.57  Train error = 57.00%, Test error = 56.00%\n",
-      "84 Loss= 66.55  Train error = 57.00%, Test error = 56.00%\n",
-      "85 Loss= 66.53  Train error = 57.00%, Test error = 56.00%\n",
-      "86 Loss= 66.51  Train error = 57.00%, Test error = 56.00%\n",
-      "87 Loss= 66.49  Train error = 57.00%, Test error = 56.00%\n",
-      "88 Loss= 66.47  Train error = 57.00%, Test error = 56.00%\n",
-      "89 Loss= 66.45  Train error = 57.00%, Test error = 56.00%\n",
-      "90 Loss= 66.43  Train error = 57.00%, Test error = 56.00%\n",
-      "91 Loss= 66.42  Train error = 57.00%, Test error = 56.00%\n",
-      "92 Loss= 66.40  Train error = 57.00%, Test error = 56.00%\n",
-      "93 Loss= 66.39  Train error = 57.00%, Test error = 56.00%\n",
-      "94 Loss= 66.37  Train error = 57.00%, Test error = 56.00%\n",
-      "95 Loss= 66.36  Train error = 57.00%, Test error = 56.00%\n",
-      "96 Loss= 66.35  Train error = 57.00%, Test error = 56.00%\n",
-      "97 Loss= 66.33  Train error = 57.00%, Test error = 56.00%\n",
-      "98 Loss= 66.32  Train error = 57.00%, Test error = 56.00%\n",
-      "99 Loss= 66.31  Train error = 57.00%, Test error = 56.00%\n",
-      "100 Loss= 66.30  Train error = 57.00%, Test error = 56.00%\n"
+      "1 Loss= 80.67  Train error = 53.00%, Test error = 48.00%\n",
+      "2 Loss= 79.97  Train error = 53.00%, Test error = 48.00%\n",
+      "3 Loss= 79.30  Train error = 53.00%, Test error = 48.00%\n",
+      "4 Loss= 78.66  Train error = 53.00%, Test error = 48.00%\n",
+      "5 Loss= 78.04  Train error = 53.00%, Test error = 48.00%\n",
+      "6 Loss= 77.45  Train error = 53.00%, Test error = 48.00%\n",
+      "7 Loss= 76.88  Train error = 53.00%, Test error = 48.00%\n",
+      "8 Loss= 76.33  Train error = 53.00%, Test error = 48.00%\n",
+      "9 Loss= 75.80  Train error = 53.00%, Test error = 48.00%\n",
+      "10 Loss= 75.30  Train error = 53.00%, Test error = 48.00%\n",
+      "11 Loss= 74.81  Train error = 53.00%, Test error = 48.00%\n",
+      "12 Loss= 74.35  Train error = 53.00%, Test error = 48.00%\n",
+      "13 Loss= 73.90  Train error = 53.00%, Test error = 48.00%\n",
+      "14 Loss= 73.47  Train error = 53.00%, Test error = 48.00%\n",
+      "15 Loss= 73.06  Train error = 53.00%, Test error = 48.00%\n",
+      "16 Loss= 72.66  Train error = 53.00%, Test error = 48.00%\n",
+      "17 Loss= 72.28  Train error = 53.00%, Test error = 48.00%\n",
+      "18 Loss= 71.92  Train error = 53.00%, Test error = 48.00%\n",
+      "19 Loss= 71.57  Train error = 53.00%, Test error = 48.00%\n",
+      "20 Loss= 71.23  Train error = 53.00%, Test error = 48.00%\n",
+      "21 Loss= 70.91  Train error = 53.00%, Test error = 48.00%\n",
+      "22 Loss= 70.60  Train error = 53.00%, Test error = 48.00%\n",
+      "23 Loss= 70.30  Train error = 53.00%, Test error = 48.00%\n",
+      "24 Loss= 70.01  Train error = 53.00%, Test error = 48.00%\n",
+      "25 Loss= 69.74  Train error = 53.00%, Test error = 48.00%\n",
+      "26 Loss= 69.47  Train error = 53.00%, Test error = 48.00%\n",
+      "27 Loss= 69.22  Train error = 53.00%, Test error = 48.00%\n",
+      "28 Loss= 68.98  Train error = 53.00%, Test error = 48.00%\n",
+      "29 Loss= 68.74  Train error = 53.00%, Test error = 48.00%\n",
+      "30 Loss= 68.52  Train error = 53.00%, Test error = 48.00%\n",
+      "31 Loss= 68.30  Train error = 53.00%, Test error = 48.00%\n",
+      "32 Loss= 68.10  Train error = 53.00%, Test error = 48.00%\n",
+      "33 Loss= 67.90  Train error = 53.00%, Test error = 48.00%\n",
+      "34 Loss= 67.71  Train error = 53.00%, Test error = 48.00%\n",
+      "35 Loss= 67.52  Train error = 53.00%, Test error = 48.00%\n",
+      "36 Loss= 67.35  Train error = 53.00%, Test error = 48.00%\n",
+      "37 Loss= 67.18  Train error = 53.00%, Test error = 48.00%\n",
+      "38 Loss= 67.02  Train error = 53.00%, Test error = 48.00%\n",
+      "39 Loss= 66.86  Train error = 53.00%, Test error = 48.00%\n",
+      "40 Loss= 66.71  Train error = 53.00%, Test error = 48.00%\n",
+      "41 Loss= 66.57  Train error = 53.00%, Test error = 48.00%\n",
+      "42 Loss= 66.43  Train error = 53.00%, Test error = 48.00%\n",
+      "43 Loss= 66.30  Train error = 53.00%, Test error = 48.00%\n",
+      "44 Loss= 66.17  Train error = 53.00%, Test error = 48.00%\n",
+      "45 Loss= 66.05  Train error = 53.00%, Test error = 48.00%\n",
+      "46 Loss= 65.93  Train error = 53.00%, Test error = 48.00%\n",
+      "47 Loss= 65.82  Train error = 53.00%, Test error = 48.00%\n",
+      "48 Loss= 65.71  Train error = 53.00%, Test error = 48.00%\n",
+      "49 Loss= 65.61  Train error = 53.00%, Test error = 48.00%\n",
+      "50 Loss= 65.51  Train error = 53.00%, Test error = 48.00%\n",
+      "51 Loss= 65.41  Train error = 53.00%, Test error = 48.00%\n",
+      "52 Loss= 65.32  Train error = 53.00%, Test error = 48.00%\n",
+      "53 Loss= 65.23  Train error = 53.00%, Test error = 48.00%\n",
+      "54 Loss= 65.15  Train error = 53.00%, Test error = 48.00%\n",
+      "55 Loss= 65.07  Train error = 53.00%, Test error = 48.00%\n",
+      "56 Loss= 64.99  Train error = 53.00%, Test error = 48.00%\n",
+      "57 Loss= 64.91  Train error = 53.00%, Test error = 48.00%\n",
+      "58 Loss= 64.84  Train error = 53.00%, Test error = 48.00%\n",
+      "59 Loss= 64.77  Train error = 53.00%, Test error = 48.00%\n",
+      "60 Loss= 64.70  Train error = 53.00%, Test error = 48.00%\n",
+      "61 Loss= 64.64  Train error = 53.00%, Test error = 48.00%\n",
+      "62 Loss= 64.58  Train error = 53.00%, Test error = 48.00%\n",
+      "63 Loss= 64.52  Train error = 53.00%, Test error = 48.00%\n",
+      "64 Loss= 64.46  Train error = 53.00%, Test error = 48.00%\n",
+      "65 Loss= 64.41  Train error = 53.00%, Test error = 48.00%\n",
+      "66 Loss= 64.36  Train error = 53.00%, Test error = 48.00%\n",
+      "67 Loss= 64.31  Train error = 53.00%, Test error = 48.00%\n",
+      "68 Loss= 64.26  Train error = 53.00%, Test error = 48.00%\n",
+      "69 Loss= 64.21  Train error = 53.00%, Test error = 48.00%\n",
+      "70 Loss= 64.17  Train error = 53.00%, Test error = 48.00%\n",
+      "71 Loss= 64.13  Train error = 53.00%, Test error = 48.00%\n",
+      "72 Loss= 64.09  Train error = 53.00%, Test error = 48.00%\n",
+      "73 Loss= 64.05  Train error = 53.00%, Test error = 48.00%\n",
+      "74 Loss= 64.01  Train error = 53.00%, Test error = 48.00%\n",
+      "75 Loss= 63.97  Train error = 53.00%, Test error = 48.00%\n",
+      "76 Loss= 63.94  Train error = 53.00%, Test error = 48.00%\n",
+      "77 Loss= 63.91  Train error = 53.00%, Test error = 48.00%\n",
+      "78 Loss= 63.87  Train error = 53.00%, Test error = 48.00%\n",
+      "79 Loss= 63.84  Train error = 53.00%, Test error = 48.00%\n",
+      "80 Loss= 63.81  Train error = 53.00%, Test error = 48.00%\n",
+      "81 Loss= 63.78  Train error = 53.00%, Test error = 48.00%\n",
+      "82 Loss= 63.76  Train error = 53.00%, Test error = 48.00%\n",
+      "83 Loss= 63.73  Train error = 53.00%, Test error = 48.00%\n",
+      "84 Loss= 63.71  Train error = 53.00%, Test error = 48.00%\n",
+      "85 Loss= 63.68  Train error = 53.00%, Test error = 48.00%\n",
+      "86 Loss= 63.66  Train error = 53.00%, Test error = 48.00%\n",
+      "87 Loss= 63.64  Train error = 53.00%, Test error = 48.00%\n",
+      "88 Loss= 63.62  Train error = 53.00%, Test error = 48.00%\n",
+      "89 Loss= 63.60  Train error = 53.00%, Test error = 48.00%\n",
+      "90 Loss= 63.58  Train error = 53.00%, Test error = 48.00%\n",
+      "91 Loss= 63.56  Train error = 53.00%, Test error = 48.00%\n",
+      "92 Loss= 63.54  Train error = 53.00%, Test error = 48.00%\n",
+      "93 Loss= 63.52  Train error = 53.00%, Test error = 48.00%\n",
+      "94 Loss= 63.50  Train error = 53.00%, Test error = 48.00%\n",
+      "95 Loss= 63.49  Train error = 53.00%, Test error = 48.00%\n",
+      "96 Loss= 63.47  Train error = 53.00%, Test error = 48.00%\n",
+      "97 Loss= 63.46  Train error = 53.00%, Test error = 48.00%\n",
+      "98 Loss= 63.44  Train error = 53.00%, Test error = 48.00%\n",
+      "99 Loss= 63.43  Train error = 53.00%, Test error = 48.00%\n",
+      "100 Loss= 63.42  Train error = 53.00%, Test error = 48.00%\n"
      ]
     }
    ],
