--- a/project_1/conv_net.ipynb
+++ b/project_1/conv_net.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import torch\n",
     "from torch import nn\n",
+    "import torch.optim as optim\n",
     "from torch.nn import functional as F\n",
     "from torch.optim.lr_scheduler import StepLR\n",
     "\n",
@@ -23,9 +24,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.optim as optim\n",
-    "\n",
-    "\n",
     "def nb_errors(pred, truth):\n",
     "    \n",
     "    pred_class = pred.argmax(1)\n",
@@ -34,8 +32,11 @@
     "    \n",
     "def train_model(model, train_input, train_target, test_input, test_target,  epochs=500, batch_size=100, lr=0.1):\n",
     "    \n",
+    "    torch.nn.init.xavier_uniform_(model.conv1.weight)\n",
+    "    torch.nn.init.xavier_uniform_(model.conv2.weight)\n",
+    "    \n",
     "    optimizer = torch.optim.Adam(model.parameters())\n",
-    "    scheduler = StepLR(optimizer, step_size=100, gamma=0.5)\n",
+    "    #scheduler = StepLR(optimizer, step_size=10, gamma=0.1)\n",
     "    train_loss = []\n",
     "    test_loss = []\n",
     "    test_accuracy = []\n",
@@ -44,13 +45,13 @@
     "    \n",
     "    for i in range(epochs):\n",
     "        for b in range(0, train_input.size(0), batch_size):\n",
-    "            optimizer.zero_grad()\n",
     "            output = model(train_input.narrow(0, b, batch_size))\n",
     "            criterion = torch.nn.CrossEntropyLoss()\n",
     "            loss = criterion(output, train_target.narrow(0, b, batch_size))\n",
+    "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "            scheduler.step()\n",
+    "            #scheduler.step()\n",
     "        \n",
     "        output_train = model(train_input)\n",
     "        output_test = model(test_input)\n",
@@ -63,7 +64,7 @@
     "            best_epoch = i+1\n",
     "        test_accuracy.append(accuracy)\n",
     "        \n",
-    "        if i%10 == 0:\n",
+    "        if i%5 == 0:\n",
     "            print('Epoch : ',i+1, '\\t', 'test loss :', test_loss[-1], '\\t', 'train loss', train_loss[-1])\n",
     "        \n",
     "    return train_loss, test_loss, test_accuracy, best_accuracy        "
@@ -108,22 +109,22 @@
     "class ConvNet2(nn.Module):\n",
     "    def __init__(self, nb_hidden):\n",
     "        super(ConvNet2, self).__init__()\n",
-    "        self.conv1 = nn.Conv2d(in_channels = 2, out_channels = 8, kernel_size=3, stride = 1)\n",
+    "        self.conv1 = nn.Conv2d(in_channels = 2, out_channels = 8, kernel_size=3)\n",
     "        self.conv2 = nn.Conv2d(8, 16, kernel_size=3, stride = 1)\n",
     "        self.fc1 = nn.Linear(64, nb_hidden)\n",
     "        self.fc2 = nn.Linear(nb_hidden, 2)\n",
-    "        self.dropout1 = nn.Dropout2d(0.25)\n",
+    "        #self.dropout1 = nn.Dropout2d(0.25)\n",
     "        #self.dropout2 = nn.Dropout2d(0.5)\n",
     "\n",
     "    def forward(self, x):\n",
-    "        x = F.max_pool2d(F.relu(self.conv1(x)), (2, 2))\n",
-    "        x = self.dropout1(x)\n",
-    "        x = F.max_pool2d(F.relu(self.conv2(x)), 2)\n",
+    "        x = F.relu(F.max_pool2d(self.conv1(x), (2, 2)))\n",
+    "        #x = self.dropout1(x)\n",
+    "        x = F.relu(F.max_pool2d(self.conv2(x), 2))\n",
     "        x = x.view(-1, 64)\n",
-    "        x = self.dropout1(x)\n",
+    "        #x = self.dropout1(x)\n",
     "        x = F.relu(self.fc1(x))\n",
     "        #x = self.dropout2(x)\n",
-    "        x = F.relu(self.fc2(x))\n",
+    "        x = self.fc2(x)\n",
     "        return x"
    ]
   },
@@ -135,6 +136,77 @@
    "source": [
     "train_input, train_target, train_classes, test_input, test_target, test_classes = prolog.generate_pair_sets(1000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = ConvNet2(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch :  1 \t test loss : 1.7596607208251953 \t train loss 1.5987602472305298\n",
+      "Epoch :  6 \t test loss : 0.8459348082542419 \t train loss 0.6801041960716248\n",
+      "Epoch :  11 \t test loss : 0.6623099446296692 \t train loss 0.47203686833381653\n",
+      "Epoch :  16 \t test loss : 0.6065219640731812 \t train loss 0.37997451424598694\n",
+      "Epoch :  21 \t test loss : 0.5845654010772705 \t train loss 0.3194357752799988\n",
+      "Epoch :  26 \t test loss : 0.5801838636398315 \t train loss 0.2742043435573578\n",
+      "Epoch :  31 \t test loss : 0.5859231352806091 \t train loss 0.22964411973953247\n",
+      "Epoch :  36 \t test loss : 0.6033982634544373 \t train loss 0.19105957448482513\n",
+      "Epoch :  41 \t test loss : 0.6262567043304443 \t train loss 0.15902751684188843\n",
+      "Epoch :  46 \t test loss : 0.657523512840271 \t train loss 0.13236689567565918\n",
+      "Epoch :  51 \t test loss : 0.6922580003738403 \t train loss 0.10970384627580643\n"
+     ]
+    }
+   ],
+   "source": [
+    "_, _, _, best_accuracy = train_model(model, train_input, train_target, test_input,\\\n",
+    "                                             test_target, epochs=51, lr = 0.005)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.771"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -644,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
