--- a/project_1/dense_network.ipynb
+++ b/project_1/dense_network.ipynb
@@ -14,6 +14,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.empty(10, 2, 3).normal_()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 0],\n",
+       "        [2, 1],\n",
+       "        [1, 0],\n",
+       "        [1, 0],\n",
+       "        [0, 0],\n",
+       "        [0, 1],\n",
+       "        [0, 1],\n",
+       "        [2, 2],\n",
+       "        [1, 1],\n",
+       "        [2, 2]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.argmax(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
