--- a/project_1/conv_net.ipynb
+++ b/project_1/conv_net.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1740,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2246,7 +2246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2451,10 +2451,170 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model1 = bigConvNet_3(500, 0.0, 0.25)\n",
+    "model2 = bigConvNet_3(500, 0.25, 0.25)\n",
+    "model3 = bigConvNet_3(500, 0.25, 0.5)\n",
+    "\n",
+    "models = [model1, model2, model3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracies = torch.empty(3, 10, dtype=torch.float)\n",
+    "epochs = 200\n",
+    "\n",
+    "for i in range(10):\n",
+    "    train_input, train_target, train_classes, test_input, test_target, test_classes = prolog.generate_pair_sets(1000)\n",
+    "\n",
+    "    train_input = train_input.view(-1, 14, 14).unsqueeze(1)\n",
+    "    test_input = test_input.view(-1, 14, 14).unsqueeze(1)\n",
+    "    train_classes = train_classes.view(2000)\n",
+    "    test_classes = test_classes.view(2000)\n",
+    "    test_target = test_target\n",
+    "\n",
+    "    for j in range(3):\n",
+    "        _, _, _, best_accuracy, _ = train_model_10(models[j], train_input, train_classes, test_input, test_target,\\\n",
+    "                                                   test_classes, epochs=epochs, lr = 0.08)\n",
+    "        accuracies[j][i] = best_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.9723, 0.9705, 0.9672])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies.mean(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0049, 0.0031, 0.0036])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies.std(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.return_types.median(\n",
+       "values=tensor([0.9710, 0.9700, 0.9670]),\n",
+       "indices=tensor([1, 9, 2]))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies.median(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.return_types.max(\n",
+       "values=tensor([0.9790, 0.9750, 0.9730]),\n",
+       "indices=tensor([8, 5, 7]))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies.max(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.return_types.min(\n",
+       "values=tensor([0.9650, 0.9660, 0.9620]),\n",
+       "indices=tensor([9, 3, 8]))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies.min(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Siamese(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, input_dim=14*14, intermediate_dim=10, output_dim=2, hidden_dim=256):\n",
+    "        super(Siamese, self).__init__()\n",
+    "        self.model = nn.Sequential(nn.Linear(input_dim, 1024), nn.ReLU(), nn.Linear(1024, intermediate_dim))\n",
+    "        self.comparison = nn.Sequential(nn.Linear(intermediate_dim, hidden_dim), nn.ReLU(),\\\n",
+    "                                        nn.Linear(hidden_dim, output_dim))\n",
+    "        \n",
+    "    def forward1(self, x):\n",
+    "        mid = self.model(x)\n",
+    "        return mid\n",
+    "    \n",
+    "    def forward2(self, mid1, mid2):\n",
+    "        mid = mid1 - mid2\n",
+    "        out = self.comparison(mid)\n",
+    "        return out"
+   ]
   }
  ],
  "metadata": {
