--- a/project_1/conv_net.ipynb
+++ b/project_1/conv_net.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2615,6 +2615,181 @@
     "        out = self.comparison(mid)\n",
     "        return out"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_double_model(model, comparison, train_input, train_target, train_classes, test_input, test_target,\\\n",
+    "                       test_classes, epochs1=100, epochs2=20, batch_size=100, lr=0.1):\n",
+    "    \n",
+    "\n",
+    "        \n",
+    "    optimizer1 = torch.optim.Adam(model.parameters())\n",
+    "    optimizer2 = torch.optim.Adam(comparison.parameters())\n",
+    "    train_loss = []\n",
+    "    test_loss = []\n",
+    "    test_accuracy = []\n",
+    "    best_accuracy = 0\n",
+    "    best_epoch = 0\n",
+    "    \n",
+    "    for i in range(epochs1):\n",
+    "        for b in range(0, train_input.size(0), batch_size):\n",
+    "            output = model(train_input.narrow(0, b, batch_size))\n",
+    "            criterion = torch.nn.CrossEntropyLoss()\n",
+    "            loss1 = criterion(output, train_classes.narrow(0, b, batch_size))\n",
+    "            optimizer1.zero_grad()\n",
+    "            loss1.backward(retain_graph=True)\n",
+    "            optimizer1.step()\n",
+    "        \n",
+    "        mid_train = model(train_input).detach()\n",
+    "        mid_test = model(test_input).detach()\n",
+    "        mid_train_ = torch.zeros(int(mid_train.size(0) / 2), 10)\n",
+    "        mid_test_ = torch.zeros(int(mid_test.size(0) / 2), 10)\n",
+    "        \n",
+    "        for i in range(int(mid_train.size(0) / 2)):\n",
+    "                mid_train_[i,:] = mid_train[2*i,:] - mid_train[2*i + 1,:]\n",
+    "                mid_test_[i,:] = mid_test[2*i,:] - mid_test[2*i + 1,:]\n",
+    "        \n",
+    "        for j in range(epochs2):\n",
+    "            for b in range(0, mid_train_.size(0), batch_size):\n",
+    "                output = comparison(mid_train_.narrow(0, b, batch_size))\n",
+    "                loss2 = criterion(output, train_target.narrow(0, b, batch_size))\n",
+    "                optimizer2.zero_grad()\n",
+    "                loss2.backward()\n",
+    "                optimizer2.step()\n",
+    "                \n",
+    "            output_train = comparison(mid_train_)\n",
+    "            output_test = comparison(mid_test_)\n",
+    "\n",
+    "            train_loss.append(criterion(output_train, train_target).item())\n",
+    "            test_loss.append(criterion(output_test, test_target).item())\n",
+    "            accuracy = 1 - nb_errors(output_test, test_target) / 1000\n",
+    "\n",
+    "            if accuracy > best_accuracy:\n",
+    "                best_accuracy = accuracy\n",
+    "                best_epoch = i+1\n",
+    "        test_accuracy.append(accuracy)\n",
+    "      \n",
+    "       \n",
+    "    return train_loss, test_loss, test_accuracy, best_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class bigConvNet_1(nn.Module):\n",
+    "    def __init__(self, nb_hidden):\n",
+    "        super(bigConvNet_1, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(in_channels = 1, out_channels = 64, kernel_size=2)\n",
+    "        self.conv2 = nn.Conv2d(64, 128, kernel_size=2, stride = 1)\n",
+    "        self.fc1 = nn.Linear(4*128, nb_hidden)\n",
+    "        self.fc2 = nn.Linear(nb_hidden, 10)\n",
+    "        self.dropout1 = nn.Dropout2d(0.25)\n",
+    "        self.dropout2 = nn.Dropout2d(0.5)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = F.relu(F.max_pool2d(self.conv1(x), (2, 2)))\n",
+    "        x = self.dropout1(x)\n",
+    "        x = F.relu(F.max_pool2d(self.conv2(x), 2))\n",
+    "        x = x.view(-1, 4*128)\n",
+    "        x = self.dropout1(x)\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = self.dropout2(x)\n",
+    "        x = self.fc2(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intermediate_dim = 10\n",
+    "output_dim = 2\n",
+    "\n",
+    "comparison1 = nn.Sequential(nn.Linear(intermediate_dim, 16), nn.ReLU(), nn.Linear(16, output_dim))\n",
+    "                                     \n",
+    "comparison2 = nn.Sequential(nn.Linear(intermediate_dim, 64), nn.ReLU(), nn.Linear(64, output_dim))\n",
+    "\n",
+    "comparison3 = nn.Sequential(nn.Linear(intermediate_dim, 256), nn.ReLU(), nn.Linear(256, output_dim))\n",
+    "\n",
+    "comparison4 = nn.Sequential(nn.Linear(intermediate_dim, 16), nn.ReLU(), nn.Linear(16, 16), nn.ReLU(),\\\n",
+    "                            nn.Linear(16, output_dim))\n",
+    "\n",
+    "comparison5 = nn.Sequential(nn.Linear(intermediate_dim, 32), nn.ReLU(), nn.Linear(32, 32), nn.ReLU(),\\\n",
+    "                            nn.Linear(32, output_dim))\n",
+    "\n",
+    "comparisons = [comparison1, comparison2, comparison3, comparison4, comparison5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comparison = comparison4\n",
+    "model = bigConvNet_1(500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs1 = 20\n",
+    "epochs2 = 5\n",
+    "accuracies = torch.empty(1, 1, dtype=torch.float)\n",
+    "\n",
+    "for i in range(1):\n",
+    "    train_input, train_target, train_classes, test_input, test_target, test_classes = prolog.generate_pair_sets(1000)\n",
+    "    \n",
+    "    train_input = train_input.view(-1, 14, 14).unsqueeze(1)\n",
+    "    test_input = test_input.view(-1,14,14).unsqueeze(1)\n",
+    "    train_classes = train_classes.view(2000)\n",
+    "    test_classes = test_classes.view(2000)\n",
+    "\n",
+    "\n",
+    "    for j in range(1):\n",
+    "        _, _, _, best_accuracy = train_double_model(model, comparisons[j], train_input, train_target, train_classes,\\\n",
+    "                                 test_input, test_target, test_classes)\n",
+    "        accuracies[j][i] = best_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.8470])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies.mean(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2639,7 +2814,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
